fix: #2957 Portrait Buttons Make Action Buttons Wrap (#2965)

--- a/web/components/ui/Content/Content.module.scss
+++ b/web/components/ui/Content/Content.module.scss
@@ -47,10 +47,24 @@
 }
 
 .mobileActionButtonMenu {
-  position: absolute;
-  top: 4px;
-  right: 10px;
-  z-index: 200;
+  display: none;
+
+  @include screen(tablet) {
+    display: block;
+    position: absolute;
+    top: 4px;
+    right: 10px;
+    z-index: 200;
+  }
+}
+
+.desktopActionButtons {
+  display: block;
+
+  @include screen(tablet) {
+    display: none;
+  }
+
 }
 
 //not sure if this is needed
